2007-04-20  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/TextDocCol.Rd: Replaced \code{readPlain} with \code{object@DefaultReader}.

	* man/TermDocMatrix.Rd: Remove deprecated \code{language} argument.

2007-04-15  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/resolve.R (resolveISOCode): Added ISO 639-1 codes for
	languages with available stopwords.

2007-04-14  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* inst/doc/tm.Rnw: Minor corrections in the vignette.

2007-04-11  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* DESCRIPTION: Update to version 0.2, since a lot of new features
	have been integrated.

	* inst/stopwords: Updated existing stopwords and added stopwords
	for various other languages.

2007-04-10  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/: Updated documentation.

	* Work/testDb.R: Script to test database stuff.

	* R/: Fixed various database related bugs. Seems to be rather
	useable now, i.e., consider as alpha status for now.

2007-04-08  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Fixed some bugs related to database support.

2007-04-07  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/: Added a lot of examples to the manuals.

2007-04-05  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/: Updated parts of the documentation.

	* R/textdoccol.R (asPlain): Added conversion from newsgroup
	documents to plain text documents.

2007-04-01  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R: Finished experimental database support. Not yet
	intensively tested.

	* R/source.R: Now each source has a default reader.

	* R/reader.R: \code{FunctionGenerator} is now an attribute, not a
	class anymore.

	* R/plaintextdoc.R: Custom show method for plain text documents.

	* R/aobjects.R: Added a class for structured text documents.

	* R/reader.R: Replaced remaining \code{parser} occurrences with
	\code{reader}.

	* R/textdoccol.R (summary): Indent tags. 

	* R/textdoccol.R (removePunctuation): Transform method to remove
	punctuation marks.
