@@ -4,7 +4,7 @@ Version: 0.2
 Date: 2007-03-04
 Author: Ingo Feinerer <h0125130@wu-wien.ac.at>
 Maintainer: Ingo Feinerer <h0125130@wu-wien.ac.at>
-Depends: cba, filehashSQLite, Matrix, methods, Snowball, XML
+Depends: cba, filehash, Matrix, methods, Snowball, XML
 Suggests: Rstem (>= 0.3-1)
 Description: A framework for text mining applications within R.
 License: GPL version 2
