@@ -62,7 +62,7 @@ collection (\class{TextDocCol}). Its constructor takes following arguments:
   indicating that database support should be activated, \code{dbName} giving the
   filename holding the sourced out objects (i.e., the database), and
   \code{dbType} holding a valid database type as supported by
-  \code{filehash} or \code{filehashSQLite}. Under activated database
+  \code{filehash}. Under activated database
   support the \code{tm} packages tries to keep as few as possible
   resources in memory under usage of the database.
 \item \code{...}: Further arguments to the reader.
